--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ matrix:
   - os: linux
     python: "3.6"
     dist: trusty
-  - os: windows
-    python: "2.7"
-  - os: windows
-    python: "3.6"
+#  - os: windows
+#    python: "2.7"
+#  - os: windows
+#    python: "3.6"
 
 install:
   - pip install .
